# sparkit

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.devcontainer/workspace/: Dockerfile  packages.txt
config/: coppel-buildWareHouse.yaml  iowa-buildWareHouse.yaml  matchGeoNames.yaml
preprocessing/: __init__.py  args.py  column.py  date.py  fill.py
scripts/: install_aws_sdk.sh
src/: downloaders.py  main.py
src/jobs/: buildWH.py  buildWareHouse.py  countWords.py  download_geodata.py  geonames.py  matchGeoNames.py  standardize_locations.py  wh.py  wh_etl.py
src/jobs/geo_standardization/: mx.py
src/sparkit/: apply.py  exceptions.py  extractors.py  factory.py  geonames.py  logging.py  objects.py  pipeline.py  preprocess.py  registry.py  sources.py  utils.py  wh.py
src/sparkit/preprocessing/: __init__.py  column.py  dataframe.py  date.py  df.py  encoders.py  math.py  pipeline.py  text.py  transformer.py
src/sparkit/sql/: functions.py
src/sparkit/tasks/: __init__.py  apply.py  etl.py
src/sparkit/utils/: python.py  spark.py
tests/: test.py
